force-app/main/default/objects/Account/fields/Apttus_Billing__AdditionalInvoiceFees__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__AdditionalInvoiceFees__c</fullName>
    <description>Additional fees that shall be added to the invoice(s) generated for this account.</description>
    <inlineHelpText>Additional fees that shall be added to the invoice(s) generated for this account.</inlineHelpText>
    <label>Additional Invoice Fees</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>