force-app/main/default/objects/Account/fields/Apttus_Billing__DunningPolicyId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__DunningPolicyId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the dunning policy object</description>
    <inlineHelpText>Use this field to override the default dunning policy with account specific dunning policy</inlineHelpText>
    <label>Dunning Policy</label>
    <referenceTo>Apttus_Billing__DunningPolicy__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>