force-app/main/default/objects/Account/fields/Apttus_Billing__ExcludeFromDunning__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ExcludeFromDunning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this flag to disable dunning for this account</description>
    <inlineHelpText>Check this flag to disable dunning for this account</inlineHelpText>
    <label>Exclude From Dunning</label>
    <type>Checkbox</type>
</CustomField>