force-app/main/default/objects/Account/fields/Apttus_Billing__LastInvoicedDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__LastInvoicedDate__c</fullName>
    <description>The last invoiced date for the account</description>
    <inlineHelpText>The last invoiced date for the account</inlineHelpText>
    <label>Last Invoiced Date</label>
    <type>Date</type>
</CustomField>