force-app/main/default/objects/Account/fields/Apttus_Billing__ManageInvoiceFees__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ManageInvoiceFees__c</fullName>
    <description>Manage different types of Invoice fees for this account.</description>
    <formula>HYPERLINK(&quot;/apex/Apttus_Billing__ManageInvoiceFeeTypes?id=&quot;&amp;Id, &quot;Manage Invoice Fees&quot;,&quot;self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Manage different types of Invoice fees for this account.</inlineHelpText>
    <label>Manage Invoice Fees</label>
    <type>Text</type>
</CustomField>