force-app/main/default/objects/Account/fields/Apttus_Billing__PaymentEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__PaymentEmailTemplate__c</fullName>
    <description>Email template used for sending payment notifications. Specify name of email template</description>
    <inlineHelpText>Email template used for sending payment notifications. Specify name of email template</inlineHelpText>
    <label>Payment Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>