force-app/main/default/objects/Account/fields/Apttus_Config2__BillingContactFilterCriteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BillingContactFilterCriteria__c</fullName>
    <description>Filter criteria to select billing contacts for the account or the comma separated list of email Ids to send billing statements.</description>
    <inlineHelpText>Filter criteria to select billing contacts for the account or the comma separated list of email Ids to send billing statements.</inlineHelpText>
    <label>Billing Contact Filter Criteria</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>