force-app/main/default/objects/Account/fields/Apttus_Config2__BillingContactFormat__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BillingContactFormat__c</fullName>
    <description>Specifies Billing Contact setup format for a given account.</description>
    <inlineHelpText>Specifies Billing Contact setup format for a given account.</inlineHelpText>
    <label>Billing Contact Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Comma Separated Values</fullName>
            </value>
            <value>
                <fullName>Filter Criteria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>