force-app/main/default/objects/Account/fields/Apttus_Config2__BillingPreferenceId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BillingPreferenceId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated billing preference</description>
    <inlineHelpText>ID of the associated billing preference</inlineHelpText>
    <label>Billing Preference</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Apttus_Config2__BillingPreference__c.Apttus_Config2__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Please select a billing preference</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Apttus_Config2__BillingPreference__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>