force-app/main/default/objects/Account/fields/Apttus_Config2__CalendarCycleStart__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CalendarCycleStart__c</fullName>
    <description>Indicates which calendar month the billing cycle will align to for a given account.</description>
    <inlineHelpText>Indicates which calendar month the billing cycle will align to for a given account.</inlineHelpText>
    <label>Calendar Cycle Start</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>January</fullName>
            </value>
            <value>
                <fullName>February</fullName>
            </value>
            <value>
                <fullName>March</fullName>
            </value>
            <value>
                <fullName>April</fullName>
            </value>
            <value>
                <fullName>May</fullName>
            </value>
            <value>
                <fullName>June</fullName>
            </value>
            <value>
                <fullName>July</fullName>
            </value>
            <value>
                <fullName>August</fullName>
            </value>
            <value>
                <fullName>September</fullName>
            </value>
            <value>
                <fullName>October</fullName>
            </value>
            <value>
                <fullName>November</fullName>
            </value>
            <value>
                <fullName>December</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>