force-app/main/default/objects/Account/fields/Apttus_Config2__CreditMemoEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CreditMemoEmailTemplate__c</fullName>
    <description>Specifies the current selected Credit Memo Email Template of an account.</description>
    <inlineHelpText>Specifies the current selected Credit Memo Email Template of an account.</inlineHelpText>
    <label>Credit Memo Email Template</label>
    <length>100</length>
    <type>Text</type>
</CustomField>