force-app/main/default/objects/Account/fields/Apttus_Config2__DefaultCreditMemoTemplate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DefaultCreditMemoTemplate__c</fullName>
    <description>The name of the default Credit Memo template for generating Credit Memo documents</description>
    <inlineHelpText>The name of the default Credit Memo template for generating Credit Memo documents</inlineHelpText>
    <label>Default Credit Memo Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>