force-app/main/default/objects/Account/fields/Apttus_Config2__DefaultInvoiceStatementTemplate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DefaultInvoiceStatementTemplate__c</fullName>
    <description>The name of the default template for generating invoice statements</description>
    <inlineHelpText>The name of the default template for generating invoice statements</inlineHelpText>
    <label>Default Invoice Statement Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>