force-app/main/default/objects/Account/fields/Apttus_Config2__InvoiceEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__InvoiceEmailTemplate__c</fullName>
    <description>Specifies the current selected Invoice Email Template for a given account.</description>
    <inlineHelpText>Specifies the current selected Invoice Email Template for a given account.</inlineHelpText>
    <label>Invoice Email Template</label>
    <length>100</length>
    <type>Text</type>
</CustomField>