force-app/main/default/objects/Account/fields/Apttus_Config2__PaymentTermId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PaymentTermId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the default payment term associated with the account</description>
    <inlineHelpText>ID of the default payment term associated with the account</inlineHelpText>
    <label>Payment Term</label>
    <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>