force-app/main/default/objects/Account/fields/Apttus_Config2__TaxExempt__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__TaxExempt__c</fullName>
    <description>The tax exempt indicator for the account</description>
    <inlineHelpText>The tax exempt indicator for the account</inlineHelpText>
    <label>Tax Exempt ?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>