force-app/main/default/objects/Account/fields/WalletManager__c.field-meta.xml
<CustomField>
    <fullName>WalletManager__c</fullName>
    <formula>HYPERLINK(
    &quot;/apex/Apttus_Config2__AccountOrderCreate?&quot;
    &amp; &quot;id=&quot; &amp; Id
    &amp; &quot;&amp;method=csrFlow&quot;
    &amp; &quot;&amp;priceListId=a4y0T000000Chxm&quot;
    &amp; &quot;&amp;flow=WalletManager&quot;
    &amp; &quot;&amp;launchState=assets&quot;
    &amp; &quot;&amp;activateOrder=true&quot;
    &amp; &quot;&amp;retId=&quot; &amp; Id,
    IMAGE(
        &quot;/resource/WalletManager&quot;,
        &quot;Wallet Manager&quot;
    ),
    &quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wallet Manager</label>
    <type>Text</type>
</CustomField>